<resources>
    <string name="app_name">SDK-AKG</string>
    <string name="facebook_app_id">2116421908480837</string>
    <string name="fb_login_protocol_scheme">fb2116421908480837</string>


    <!--Button Login-->
    <string name="btn_login_facebook">Sign in with Facebook</string>
    <string name="btn_login_gmail">Sign in with Google Play</string>
    <string name="btn_login_guest">Guest Login</string>
    <string name="btn_login_phone">Phone Login</string>

    <!--Button Relaunch-->
    <string name="btn_continue">Continue in 1s</string>
    <string name="btn_choose_account">Choose Account</string>
    <string name="sign_in_with_another_account">Sign in with another account</string>

    <string name="registration_desc">Input your phone number &amp; OTP’s code from your message that already been sent
    </string>
    <string name="forgot_title">Forgot Password</string>
    <string name="forgot_desc">Input your new password
    </string>
    <string name="registration_desc2">Please input your password and verify your password</string>

    <string name="success_placeholder">Your account with number +62 82112 5 XXX19 already been made</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="logout_desc">Do you want to get out from this account?</string>
    <string name="check_update_desc">Your SDK\'s Version is %s, and already been updated</string>
    <string name="update_sdk_version">Your SDK\’s Version is %s. You still not yet update the
        newest version. For the newest updated version, please click
        button below this.</string>
    <string name="contact_us_desc">Contact us to our email admin@akggames.com</string>

    <string name="verification_header">Account Verification</string>
    <string name="verification_desc">Input your old password and verify your password</string>

    <string name="verify_account">Please input your sign in account</string>
    <string name="bind_account">Secure your progress by binding your account</string>

    <string name="change_password_desc">Input your old password and input your new password</string>
</resources>
