<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/grey"
        android:layout_gravity="center"
        android:orientation="vertical"
        app:cardCornerRadius="16dp"
        android:layout_width="match_parent"
        android:maxWidth="400dp"
        android:layout_margin="16dp"
        android:layout_height="400dp">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@mipmap/bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ImageView
                android:layout_width="210dp"
                android:layout_height="70dp"

                android:background="@drawable/vector_logo"
                android:id="@+id/ivLogo" android:layout_marginTop="36dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.5"/>
        <Button
                android:text="@string/btn_continue"
                android:paddingLeft="36dp"
                android:paddingRight="36dp"
                android:layout_width="0dp"
                style="@style/ButtonLogin"
                android:gravity="center"
                android:drawablePadding="24dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_rectangle_red"
                android:id="@+id/btnLoginFacebook"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="36dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="36dp"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/tvDesc"/>
        <Button
                android:text="@string/btn_choose_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingLeft="36dp"
                android:paddingRight="36dp"
                android:id="@+id/btnLoginGoogle"
                android:gravity="center"
                android:layout_marginTop="12dp"
                style="@style/ButtonLogin"
                android:drawablePadding="24dp"
                android:background="@drawable/rounded_rectangle_tosca"
                app:layout_constraintEnd_toEndOf="@+id/btnLoginFacebook"
                app:layout_constraintStart_toStartOf="@+id/btnLoginFacebook"
                app:layout_constraintTop_toBottomOf="@+id/textView"/>
        <TextView
                android:text="@string/sign_in_with_another_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/btnLoginFacebook"/>

        <View
                android:layout_width="0dp"
                android:background="@color/light_grey"
                android:layout_height="2dp"
                android:id="@+id/view" app:layout_constraintEnd_toStartOf="@+id/textView"
                android:layout_marginEnd="12dp"
                app:layout_constraintStart_toStartOf="@+id/btnLoginGoogle"
                app:layout_constraintTop_toTopOf="@+id/textView"
                app:layout_constraintBottom_toBottomOf="@+id/textView"/>
        <View
                android:layout_width="0dp"
                android:background="@color/light_grey"
                android:layout_height="2dp"
                android:id="@+id/view2"
                app:layout_constraintTop_toTopOf="@+id/textView" app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="@+id/btnLoginGoogle" app:layout_constraintStart_toEndOf="@+id/textView"
                android:layout_marginStart="12dp"/>
        <TextView
                android:text="Welcome +62812577719,"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvPhoneNumber" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/ivLogo"
                app:layout_constraintStart_toStartOf="@+id/btnLoginFacebook"/>
        <TextView
                android:text="UID : 20182874108b3147839"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvDesc" app:layout_constraintStart_toStartOf="@+id/btnLoginFacebook"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tvPhoneNumber"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>