<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">
    <androidx.cardview.widget.CardView

            android:layout_gravity="center"
            android:orientation="vertical"
            app:cardCornerRadius="16dp"
            android:layout_width="match_parent"
            android:layout_margin="16dp"
            android:maxWidth="400px"
            android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:paddingBottom="24dp"
                android:background="@mipmap/bg"
                android:layout_height="match_parent">
            <com.facebook.login.widget.LoginButton
                    android:id="@+id/fbLoginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    tools:ignore="MissingConstraints"/>
            <ImageView
                    android:layout_width="210dp"
                    android:layout_height="70dp"
                    android:background="@drawable/vector_logo"
                    android:id="@+id/ivLogo" android:layout_marginTop="24dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintHorizontal_bias="0.5"/>
            <Button
                    android:text="@string/btn_login_facebook"
                    android:paddingLeft="36dp"
                    android:paddingRight="36dp"
                    android:layout_width="0dp"
                    style="@style/ButtonLogin"
                    android:drawablePadding="24dp"
                    android:drawableLeft="@drawable/vector_ic_btn_fb"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_rectangle_blue"
                    android:id="@+id/btnLoginFacebook"
                    android:layout_marginTop="36dp"
                    app:layout_constraintTop_toBottomOf="@+id/ivLogo" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="36dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="36dp"/>
            <Button
                    android:text="@string/btn_login_gmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="36dp"
                    android:paddingRight="36dp"
                    android:id="@+id/btnLoginGoogle"
                    style="@style/ButtonLogin"
                    android:drawablePadding="24dp"
                    android:drawableLeft="@drawable/vector_ic_btn_google"
                    android:background="@drawable/rounded_rectangle_green"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/btnLoginFacebook"
                    app:layout_constraintEnd_toEndOf="@+id/btnLoginFacebook"
                    app:layout_constraintStart_toStartOf="@+id/btnLoginFacebook"/>
            <TextView
                    android:text="Other Login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/btnLoginGoogle"/>
            <Button
                    android:text="@string/btn_login_guest"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnGuest"
                    android:layout_marginTop="16dp"
                    android:drawablePadding="8dp"
                    android:drawableLeft="@drawable/vector_ic_btn_guest"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    app:layout_constraintStart_toStartOf="@+id/btnLoginGoogle"
                    style="@style/ButtonLogin"
                    android:background="@drawable/rounded_rectangle_tosca"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0" app:layout_constraintBottom_toBottomOf="parent"/>
            <Button
                    android:text="@string/btn_login_phone"
                    android:layout_width="150dp"
                    style="@style/ButtonLogin"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnLoginPhone" app:layout_constraintEnd_toEndOf="@+id/btnLoginGoogle"
                    android:layout_marginTop="16dp"
                    android:drawableLeft="@drawable/vector_ic_btn_phone"
                    android:drawablePadding="8dp"
                    android:background="@drawable/rounded_rectangle_tosca"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            <View
                    android:layout_width="0dp"
                    android:background="@color/light_grey"
                    android:layout_height="2dp"
                    android:id="@+id/view" app:layout_constraintEnd_toStartOf="@+id/textView"
                    android:layout_marginEnd="12dp"
                    app:layout_constraintStart_toStartOf="@+id/btnLoginGoogle"
                    app:layout_constraintTop_toTopOf="@+id/textView"
                    app:layout_constraintBottom_toBottomOf="@+id/textView"/>
            <View
                    android:layout_width="0dp"
                    android:background="@color/light_grey"
                    android:layout_height="2dp"
                    android:id="@+id/view2"
                    app:layout_constraintTop_toTopOf="@+id/textView"
                    app:layout_constraintBottom_toBottomOf="@+id/textView"
                    app:layout_constraintEnd_toEndOf="@+id/btnLoginGoogle"
                    app:layout_constraintStart_toEndOf="@+id/textView"
                    android:layout_marginStart="12dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>
        <!--<?xml version="1.0" encoding="utf-8"?>

        <androidx.cardview.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:background="#00000000"
                android:layout_gravity="center"
                android:orientation="vertical"
                app:cardCornerRadius="16dp"
                android:layout_width="match_parent"
                android:maxWidth="400px"
                android:layout_height="400dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:background="@mipmap/bg"
                    android:layout_height="match_parent">
                <com.facebook.login.widget.LoginButton
                        android:id="@+id/fbLoginButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        tools:ignore="MissingConstraints"/>
                <ImageView
                        android:layout_width="210dp"
                        android:layout_height="70dp"

                        android:background="@drawable/vector_logo"
                        android:id="@+id/ivLogo" android:layout_marginTop="36dp"
                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintHorizontal_bias="0.5"/>
                <Button
                        android:text="@string/btn_login_facebook"
                        android:paddingLeft="36dp"
                        android:paddingRight="36dp"
                        android:layout_width="0dp"
                        style="@style/ButtonLogin"
                        android:drawablePadding="24dp"
                        android:drawableLeft="@drawable/vector_ic_btn_fb"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_rectangle_blue"
                        android:id="@+id/btnLoginFacebook"
                        android:layout_marginTop="36dp"
                        app:layout_constraintTop_toBottomOf="@+id/ivLogo" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="36dp" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="36dp"/>
                <Button
                        android:text="@string/btn_login_gmail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingLeft="36dp"
                        android:paddingRight="36dp"
                        android:id="@+id/btnLoginGoogle"
                        style="@style/ButtonLogin"
                        android:drawablePadding="24dp"
                        android:drawableLeft="@drawable/vector_ic_btn_google"
                        android:background="@drawable/rounded_rectangle_green"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/btnLoginFacebook"
                        app:layout_constraintEnd_toEndOf="@+id/btnLoginFacebook"
                        app:layout_constraintStart_toStartOf="@+id/btnLoginFacebook"/>
                <TextView
                        android:text="Other Login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/btnLoginGoogle"/>
                <Button
                        android:text="@string/btn_login_guest"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/btnGuest"
                        android:layout_marginTop="16dp"
                        android:drawablePadding="8dp"
                        android:drawableLeft="@drawable/vector_ic_btn_guest"

                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"

                        app:layout_constraintStart_toStartOf="@+id/btnLoginGoogle"
                        android:layout_marginStart="0dp"
                        style="@style/ButtonLogin"
                        android:background="@drawable/rounded_rectangle_tosca"
                        android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"/>
                <Button
                        android:text="@string/btn_login_phone"
                        android:layout_width="150dp"
                        style="@style/ButtonLogin"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/btnPhone" app:layout_constraintEnd_toEndOf="@+id/btnLoginGoogle"
                        android:layout_marginTop="16dp"
                        android:drawableLeft="@drawable/vector_ic_btn_phone"
                        android:drawablePadding="8dp"
                        android:background="@drawable/rounded_rectangle_tosca"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"/>
                <View
                        android:layout_width="0dp"
                        android:background="@color/light_grey"
                        android:layout_height="2dp"
                        android:id="@+id/view" app:layout_constraintEnd_toStartOf="@+id/textView"
                        android:layout_marginEnd="12dp"
                        app:layout_constraintStart_toStartOf="@+id/btnLoginGoogle"
                        app:layout_constraintTop_toTopOf="@+id/textView"
                        app:layout_constraintBottom_toBottomOf="@+id/textView"/>
                <View
                        android:layout_width="0dp"
                        android:background="@color/light_grey"
                        android:layout_height="2dp"
                        android:id="@+id/view2"
                        app:layout_constraintTop_toTopOf="@+id/textView"
                        app:layout_constraintBottom_toBottomOf="@+id/textView"
                        app:layout_constraintEnd_toEndOf="@+id/btnLoginGoogle"
                        app:layout_constraintStart_toEndOf="@+id/textView"
                        android:layout_marginStart="12dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
        -->